# svd2mmio-ll-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  opt.rs  util.rs
src/generate/: device.rs  interrupt.rs  mod.rs  peripheral.rs
